--- a/todo/static/todo/styles.css
+++ b/todo/static/todo/styles.css
@@ -4,7 +4,8 @@
   }
 body {
 	background: rgba(1, 61, 80, 0.8);
-	font-family: Poppins-Regular;
+    font-family: Poppins-Regular;
+    
 }
 #wrapper {
 	/* margin-top: 10% !important; */
@@ -67,7 +68,8 @@ body {
     box-shadow: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
-    -ms-box-shadow: none
+    -ms-box-shadow: none;
+    border-radius: 10px;
 }
 
 .pl-3,
@@ -84,7 +86,7 @@ body {
     background-color: #fff;
     background-clip: border-box;
     border: 1px solid #d2d2dc;
-    border-radius: 0
+    border-radius: 10px;
 }
 
 .pr-3,
@@ -105,7 +107,7 @@ body {
     color: #000000;
     margin-bottom: 0.625rem;
     text-transform: capitalize;
-    font-size: 0.875rem;
+    font-size: 24px;
     font-weight: 500
 }
 
